# SimpleResume

./: .env_example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pytest.ini
.github/: core-protected-paths.txt  (+1 more)
api/: .env.example  Dockerfile  OPS_CHECKLIST.md  compile_pdf.py  config.py  dhruv_preamble.tex  main.py  prompts.py  pyproject.toml  requirements.txt  structured_resume.py
api/features/: __init__.py  paths.py
api/features/generation/: __init__.py  prompts.py  structured_resume.py
api/features/pdf_rendering/: __init__.py  compile_pdf.py
api/features/resume_pipeline/: __init__.py
api/resume_pipeline/: __init__.py  orchestrator.py
api/resume_pipeline/pipeline/: ats_check.py  checker_llm.py  compile.py  fixer_llm.py  generate.py  pdf_checks.py
api/resume_service/: __init__.py  app.py  config.py  constants.py  custom_logging.py  lifespan.py  middleware.py
api/resume_service/models/: __init__.py  bullet_chat.py  coaching.py  resume.py  resume_review.py  resume_score.py
api/resume_service/routers/: __init__.py  _helpers.py  bullet_chat.py  coaching.py  compile.py  health.py  resume.py  resume_review.py  resume_score.py
api/resume_service/services/: __init__.py  bullet_chat_service.py  openai_service.py  pdf_service.py  resume_parse_service.py  resume_review_service.py  resume_score_llm.py  resume_score_parser.py  resume_score_rules.py  resume_score_service.py  tex_service.py
api/routers/: __init__.py  _helpers.py  compile.py  generate.py  health.py
api/scripts/: measure_pdf_bottom_mean.py
api/tex_assets/: README.md
(+132 files in other folders)
