[project]
name = "simpleresume-api"
version = "0.1.0"
description = "FastAPI backend for SimpleResume — AI-powered resume optimizer"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "python-multipart==0.0.17",
    "openai==1.57.4",
    "pypdf==5.1.0",
    "Pillow==11.0.0",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "python-dotenv==1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["../tests/unit", "../tests/integration", "../tests/golden"]
filterwarnings = ["ignore::DeprecationWarning"]
